Tue May 20 00:45:40 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (push_braces): do not push_braces() unless rbrace is found.
	  (ruby-bugs-ja:PR#469)

Thu May 15 19:30:44 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_block_given_p): false if ruby_block is null.

Sun Apr 20 03:09:30 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* parse.y (void_expr0): node might become NULL after calling
	  remove_begin().

Wed Apr  9 16:14:24 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* ext/extmk.rb.in (create_makefile): link @LIBS@.

Wed Mar 26 20:26:17 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* dln.c (dln_find_1): break if path list end, even for too long
	  path names.  (ruby-bugs-ja:PR#412)

Sun Mar 23 22:22:04 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/jcode.rb (tr!, delete!, szueeze!): add empty string checking.

Sun Mar 23 19:55:32 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* gc.c (rb_gc_call_finalizer_at_exit): use free() if dfree is -1.

Thu Mar 20 10:11:23 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_require): clear ruby_errinfo.

Wed Mar 19 23:05:30 2003  NAKAMURA, Hiroshi <nahi@ruby-lang.org>

	* lib/tracer.rb (trace_func): save and recover Thread.critical state.
	  Fixed by Fukumoto Atsushi <fukumoto@imasy.or.jp> [ruby-dev:19830]

Tue Mar 11 21:06:31 2003  Minero Aoki  <aamine@loveruby.net>

	* lib/net/smtp.rb (auth_cram_md5): Digest string had wrongly
	  included '\n' when user name is too long. (ruby-bugs-ja:PR#404)

Fri Mar  7 00:30:33 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/Win32API/Win32API.c: no longer use inline-asms.

	* ext/Win32API/extconf.rb: no need to add gcc options.

Fri Feb 28 22:53:55 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* win32/win32.c (flock): maps error code.

	* win32/win32.c (win32_asynchronize): returns errno from child
	  thread.

	* win32/win32.c (win32_fclose, win32_close): ensures unlocked.
